# lootr-rs

./: Cargo.toml  README.md
.github/workflows/: docs.yml  linting.yml  publish.yml
src/: README.md  drops.rs  item.rs  lib.rs  tests.rs
