[package]
name = "lootr"
description = "A simple RPG-like looting system"
version = "0.3.0"
authors = ["Vincent Lark <vincent.lark@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/vincent/lootr-rs/"
repository = "https://github.com/vincent/lootr-rs/"
documentation = "https://docs.rs/lootr"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ascii_tree = "0.1.1"
